--- a/index.html
+++ b/index.html
@@ -5,26 +5,51 @@
   <head>
     <title>egecelikci</title>
     <style>
-      *{font-family:'Fira Code','FiraCode Nerd Font','Courier','Consolas',monospace}
-      html,body,::selection{background-color:#222;color:#222;user-select:none}
-      div{color:#fff;user-select:text}
-      a{color:#ddd;text-decoration:none}
+      * {
+        font-family: "Fira Code", "FiraCode Nerd Font", "Courier", "Consolas",
+          monospace;
+      }
+      html,
+      body,
+      ::selection {
+        background-color: #222;
+        color: #222;
+        user-select: none;
+      }
+      div {
+        color: #fff;
+        user-select: text;
+      }
+      a {
+        color: #ddd;
+        text-decoration: none;
+      }
+      .pink {
+        color: #ffbcd9;
+      }
     </style>
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-    <link rel="shortcut icon" href="favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div>
-    <br/>
-    email:
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:&#104;&#101;&#108;&#108;&#111;&#64;&#101;&#103;&#101;&#99;&#101;&#108;&#105;&#107;&#99;&#105;&#46;&#99;&#111;&#109;">hello@egecelikci.com</a><br/>
-    github:
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/egecelikci">https://github.com/egecelikci</a><br/>
-    twitter:
-    &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/egecelikci">https://twitter.com/egecelikci</a><br/>
-  </div>
+      <br />
+      email: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+        href="mailto:&#104;&#101;&#108;&#108;&#111;&#64;&#101;&#103;&#101;&#99;&#101;&#108;&#105;&#107;&#99;&#105;&#46;&#99;&#111;&#109;"
+        >hello@egecelikci.com</a
+      ><br />
+      github: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+        href="https://github.com/egecelikci"
+        >https://github.com/egecelikci</a
+      ><br />
+      twitter: &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/egecelikci"
+        >https://twitter.com/egecelikci</a
+      ><br />
+      <br /><br />
+      <span class="pink">wip</span>
+    </div>
   </body>
 </html>
 <!--
