--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>egecelikci</title>
+    <title>!^*+egecelikci&#129415;&#128139;+*^!</title>
     <style>
       * {
         font-family: "Fira Code", "FiraCode Nerd Font", "Courier", "Consolas",
