--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         href="https://github.com/egecelikci"
         >https://github.com/egecelikci</a
       ><br />
+      matrix: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+        href="https://matrix.to/#/@egecelikci:matrix.org"
+        >https://matrix.to/#/@egecelikci:matrix.org</a
+      ><br />
     </div>
   </body>
 </html>
