--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ EOF
 #!/bin/sh
 
 EG_GITHUB="https://github.com/egecelikci"
-EG_TWITTER="https://twitter.com/egecelikci"
+EG_MATRIX="https://matrix.to/#/@egecelikci:matrix.org"
 
 BLACK='\e[30m'
 RED='\e[31m'
@@ -75,7 +75,7 @@ ST='\e\'
 printf "\n\n${UNDERLINE}${BLUE}Hello! ${YELLOW}I'm ${BLINK}${YELLOW}egecelikci${NORMAL}"
 printf "\n${BLUE}You can find me here: ${NORMAL}"
 printf "\n\t${GREEN}${LINK}${EG_GITHUB}${ST}${EG_GITHUB}${LINK}${ST}"
-printf "\n\t${GREEN}${LINK}${EG_TWITTER}${ST}${EG_TWITTER}${LINK}${ST}"
+printf "\n\t${GREEN}${LINK}${EG_MATRIX}${ST}${EG_MATRIX}${LINK}${ST}"
 printf "\n"
 
 exit 0
